--- a/src/config/algs/cgmix.yaml
+++ b/src/config/algs/cgmix.yaml
@@ -29,3 +29,4 @@ mixer: "qmix"                 # QMIX
 mixing_embed_dim: 2           # Hidden dimensions of the state dependent bias function of CGMIX
 hypernet_layers: 2
 hypernet_embed: 64
+leaky_alpha: 0.1
