--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ certifi==2018.8.24
 chardet==3.0.4
 cycler==0.10.0
 docopt==0.6.2
-enum34==1.1.6
+#enum34==1.1.6
 future==0.16.0
 idna==2.7
 imageio==2.4.1
@@ -25,7 +25,7 @@ portpicker==1.2.0
 probscale==0.2.3
 protobuf==3.6.1
 py==1.6.0
-pygame==1.9.4
+pygame==2.0.0
 pyparsing==2.2.2
 pysc2==3.0.0
 pytest==3.8.2
@@ -39,7 +39,9 @@ six==1.11.0
 sk-video==1.1.10
 snakeviz==1.0.0
 tensorboard-logger==0.1.0
-torch==0.4.1
+torch==1.2.0
+torch-scatter==1.3.1
+#torch_scatter==2.0.3+cu100 -f https://pytorch-geometric.com/whl/torch-1.4.0.html
 torchvision==0.2.1
 tornado==5.1.1
 urllib3==1.23
