--- a/src/config/default.yaml
+++ b/src/config/default.yaml
@@ -17,10 +17,11 @@ use_cuda: True # Use gpu by default unless it isn't available
 buffer_cpu_only: True # If true we won't keep all of the replay buffer in vram
 
 # --- Logging options ---
-use_tensorboard: False # Log results to tensorboard
-save_model: False # Save the models to disk
-save_model_interval: 2000000 # Save models after this many timesteps
-checkpoint_path: "" # Load a checkpoint from this path
+use_tensorboard: True # Log results to tensorboard
+save_model: True # Save the models to disk
+save_model_interval: 500000 # Save models after this many timesteps
+#checkpoint_path: "results/models/cgmix__2021-12-15_06-20-36_cp/" # Load a checkpoint from this path
+checkpoint_path: ""
 evaluate: False # Evaluate model for test_nepisode episodes and quit (no training)
 load_step: 0 # Load model trained on this many timesteps (0 if choose max possible)
 save_replay: False # Saving the replay of the model loaded from checkpoint_path
