--- a/src/config/envs/sc2.yaml
+++ b/src/config/envs/sc2.yaml
@@ -4,7 +4,8 @@ env_args:
   continuing_episode: False
   difficulty: "7"
   game_version: null
-  map_name: "3m"
+  #map_name: "8m_vs_9m"
+  map_name: "5m_vs_6m"
   move_amount: 2
   obs_all_health: True
   obs_instead_of_state: False
@@ -37,4 +38,4 @@ test_interval: 10000
 log_interval: 10000
 runner_log_interval: 10000
 learner_log_interval: 10000
-t_max: 2050000
+t_max: 20500000
