Run toy game and plot.

--- a/src/config/algs/cgmix.yaml
+++ b/src/config/algs/cgmix.yaml
@@ -5,10 +5,11 @@ name: "cgmix"
 action_selector: "epsilon_greedy"
 epsilon_start: 1.0            # Initial epsilon for exploration
 epsilon_finish: 0.05          # Final epsilon for exploration
-epsilon_anneal_time: 50000    # Number of time steps until exploration has finished
+epsilon_anneal_time: 50000    # Number of time steps until exploration has finished ###???
 
 # specify runner
-buffer_size: 5000              # Number of episodes in the experience replay buffer
+buffer_size: 5000              # Number of episodes in the experience replay buffer ###???
+local_results_path: "results.5mv6m/cgmix_buffer5k_eps50k_mixemb1_alpha0.5_rnnfeat" # Path for local results ###
 
 # Specify the CG
 cg_utilities_hidden_dim:      # Hidden layers of utility functions, by default None
