--- a/src/config/algs/dcg.yaml
+++ b/src/config/algs/dcg.yaml
@@ -5,10 +5,12 @@ name: "dcg"
 action_selector: "epsilon_greedy"
 epsilon_start: 1.0            # Initial epsilon for exploration
 epsilon_finish: 0.05          # Final epsilon for exploration
-epsilon_anneal_time: 50000    # Number of time steps until exploration has finished
+epsilon_anneal_time: 50000    # Number of time steps until exploration has finished ###???
 
 # specify runner
-buffer_size: 5000              # Number of episodes in the experience replay buffer
+buffer_size: 5000              # Number of episodes in the experience replay buffer ###???
+local_results_path: "results.5mv6m/dcg_buffer5k_eps50k_rnnfeat" # Path for local results ###
+
 
 # Specify the CG
 cg_edges: 'full'    # Defines the CG: {'vdn', 'line', 'cycle', 'star', 'full', n_rand_edges:int, [[int,int], .., [int,int]]}
