--- a/src/config/envs/toygame.yaml
+++ b/src/config/envs/toygame.yaml
@@ -9,7 +9,7 @@ env_args:
 learner_log_interval: 10000
 log_interval: 10000
 runner_log_interval: 10000
-t_max: 1005000
+t_max: 55000
 test_interval: 10000
 test_nepisode: 300
 test_greedy: True
