--- a/src/config/algs/cgmix_iqm.yaml
+++ b/src/config/algs/cgmix_iqm.yaml
@@ -9,6 +9,8 @@ epsilon_anneal_time: 50000    # Number of time steps until exploration has finis
 
 # specify runner
 buffer_size: 5000              # Number of episodes in the experience replay buffer
+local_results_path: "results.matrixgame/cgmixiqm_buffer5k_eps50k_heu_mixemb32_alpha0.5_rnnfeat" # Path for local results ###
+
 
 # Specify the CG
 cg_utilities_hidden_dim:      # Hidden layers of utility functions, by default None
