Camera ready version.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 .idea/
 
 # Exclude the results that you may have produced in past experiments
-results*/
+"archive.*"
+result/
+plot_results*/
 
 *code-workspace
 .vscode
