--- a/src/config/algs/vdn.yaml
+++ b/src/config/algs/vdn.yaml
@@ -9,6 +9,7 @@ epsilon_anneal_time: 50000
 runner: "episode"
 
 buffer_size: 5000
+local_results_path: "vdn" # Path for local results ###
 
 # update the target network every {} episodes
 target_update_interval: 200
