--- a/src/config/envs/hallway.yaml
+++ b/src/config/envs/hallway.yaml
@@ -12,7 +12,12 @@ env_args:
 learner_log_interval: 10000
 log_interval: 10000
 runner_log_interval: 10000
-t_max: 2005000
 test_interval: 10000
 test_nepisode: 300
 test_greedy: True
+
+local_results_dir: 'result/result.hallway/'
+save_model_interval: 500000
+t_max: 2005000
+mixingnetwork_weights: &mixingnetwork_weights "nonneg_" #nonneg_, all1init_, arbitraryfirstlayer_, stateless_
+mixingnetwork_bias: &mixingnetwork_bias 2
