--- a/src/config/envs/pursuit.yaml
+++ b/src/config/envs/pursuit.yaml
@@ -4,7 +4,7 @@ env_args:
   n_agents: 10
   n_preys: 5
   episode_limit: 50
-  map_size: 10
+  map_size: 5 ###???
   catch_reward: 1
   catch_fail_reward: -1
   sight_range: 2
@@ -14,7 +14,13 @@ env_args:
 learner_log_interval: 10000
 log_interval: 10000
 runner_log_interval: 10000
-t_max: 2005000
 test_interval: 10000
-test_nepisode: 300
+test_nepisode: 300 #1
 test_greedy: True
+
+local_results_dir: 'result/result.pursuit/'
+save_model_interval: 500000
+t_max: 2005000
+mixingnetwork_weights: &mixingnetwork_weights "nonneg_" #nonneg_, all1init_, arbitraryfirstlayer_, stateless_
+mixingnetwork_bias: &mixingnetwork_bias 2
+lr: 0.01
