--- a/src/config/envs/sc2.yaml
+++ b/src/config/envs/sc2.yaml
@@ -5,7 +5,7 @@ env_args:
   difficulty: "7"
   game_version: null
   #map_name: "8m_vs_9m"
-  map_name: "5m_vs_6m"
+  map_name: &map_name "MMM2" #"5m_vs_6m"
   move_amount: 2
   obs_all_health: True
   obs_instead_of_state: False
@@ -39,3 +39,5 @@ log_interval: 10000
 runner_log_interval: 10000
 learner_log_interval: 10000
 t_max: 20500000
+
+local_results_dir: !join [result/result.sc2/, *map_name]
