--- a/src/config/algs/qmix.yaml
+++ b/src/config/algs/qmix.yaml
@@ -18,7 +18,9 @@ agent_output_type: "q"
 learner: "q_learner"
 double_q: True
 mixer: "qmix"
-mixing_embed_dim: 32
+mixing_embed_dim: &m 32 #??
+local_results_path: !join [qmix_mixemb, *m] # Path for local results ###
+
 hypernet_layers: 2
 hypernet_embed: 64
 
