--- a/src/config/default.yaml
+++ b/src/config/default.yaml
@@ -46,3 +46,10 @@ obs_last_action: True # Include the agent's last action (one_hot) in the observa
 # --- Experiment running params ---
 repeat_id: 1
 label: "default_label"
+
+local_results_dir: 'result/result.misc/'
+mixingnetwork_weights: &mixingnetwork_weights "nonneg_" #nonneg_, all1init_, arbitraryfirstlayer_, stateless_
+mixingnetwork_bias: &mixingnetwork_bias 2
+use_tensorboard: True
+use_sacred: True
+save_model: True
