--- a/src/config/envs/gather.yaml
+++ b/src/config/envs/gather.yaml
@@ -15,7 +15,12 @@ env_args:
 learner_log_interval: 10000
 log_interval: 10000
 runner_log_interval: 10000
-t_max: 2005000
 test_interval: 10000
 test_nepisode: 300
 test_greedy: True
+
+local_results_dir: 'result/result.gather/'
+save_model_interval: 500000
+t_max: 1505000
+mixingnetwork_weights: &mixingnetwork_weights "all1init_" #nonneg_, all1init_, arbitraryfirstlayer_, stateless_
+mixingnetwork_bias: &mixingnetwork_bias 2
