--- a/src/config/envs/sensor.yaml
+++ b/src/config/envs/sensor.yaml
@@ -13,7 +13,12 @@ env_args:
 learner_log_interval: 10000
 log_interval: 10000
 runner_log_interval: 10000
-t_max: 2005000
 test_interval: 10000
 test_nepisode: 300
 test_greedy: True
+
+local_results_dir: 'result/result.sensor/'
+save_model_interval: 50000
+t_max: 205000
+mixingnetwork_weights: &mixingnetwork_weights "nonneg_" #nonneg_, all1init_, arbitraryfirstlayer_, stateless_
+mixingnetwork_bias: &mixingnetwork_bias 2
